RESOLVED FIXED230118
[Table layout] Incorrect vertical position when the inline level box has 0px used height.
https://bugs.webkit.org/show_bug.cgi?id=230118
Summary [Table layout] Incorrect vertical position when the inline level box has 0px ...
alan
Reported 2021-09-09 12:04:00 PDT
ssia
Attachments
Patch (4.74 KB, patch)
2021-09-09 13:16 PDT, alan
no flags
Patch (10.43 KB, patch)
2021-09-09 14:03 PDT, alan
no flags
Patch (12.70 KB, patch)
2021-09-09 15:01 PDT, alan
no flags
Patch (19.79 KB, patch)
2021-09-09 19:22 PDT, alan
no flags
alan
Comment 1 2021-09-09 13:16:45 PDT
alan
Comment 2 2021-09-09 14:03:56 PDT
alan
Comment 3 2021-09-09 15:01:32 PDT
alan
Comment 4 2021-09-09 19:22:21 PDT
EWS
Comment 5 2021-09-09 20:04:51 PDT
Committed r282256 (241534@main): <https://commits.webkit.org/241534@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437826 [details].
Radar WebKit Bug Importer
Comment 6 2021-09-09 20:05:17 PDT
Note You need to log in before you can comment on or make changes to this bug.