[Table layout] Incorrect vertical position when the inline level box has 0px used height. https://bugs.webkit.org/show_bug.cgi?id=230118

Reviewed by Antti Koivisto.

Source/WebCore:

Intrinsic padding is used in table cells to offset the content with their alignments as the content box may not be as tall as the cell itself.
This patch ensures that zero height content (where the baseline is also 0) gets the alignment offset as well.
(This patch also fixes the bug where we may reset the intrinsic padding to 0 on subsequent layouts.)

Test: fast/table/vertical-position-with-0-height-box.html

* rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::computeIntrinsicPadding):

LayoutTests:

* fast/table/vertical-position-with-0-height-box-expected.txt: Added.
* fast/table/vertical-position-with-0-height-box.html: Added.


Canonical link: https://commits.webkit.org/241534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282256 268f45cc-cd09-0410-ab3c-d52691b4dbfc